@@ -2,6 +2,7 @@ Revision history for Perl extension Data::BitStream.
 
 0.08    7 Aug 2014
         - Updates to documentation.
+        - Goldbach encoding almost 2x faster (sped up pair search).
 
 0.07    1 Jan 2013
 	- Change from Mouse to Moo.  Mouse has great performance, but the Perl
